<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/activity_title"/>

    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_dp_sixty"
        android:textSize="@dimen/app_dp_thirty_five"
        android:text="@string/version" />

    <TextView
        android:id="@+id/help"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_dp_sixty"
        android:textSize="@dimen/app_dp_thirty_five"
        android:text="@string/help" />

    <TextView
        android:id="@+id/change_user"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_dp_sixty"
        android:textSize="@dimen/app_dp_thirty_five"
        android:text="@string/change_user" />

    <TextView
        android:id="@+id/sign_out"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_dp_sixty"
        android:textSize="@dimen/app_dp_thirty_five"
        android:text="@string/sign_out" />


</LinearLayout>