<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/activity_title"/>

    <TextView
        android:id="@+id/file_broadcast"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_dp_sixty"
        android:textSize="@dimen/app_dp_thirty_five"
        android:text="@string/file_broadcast" />

    <TextView
        android:id="@+id/audio_broadcast"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_dp_sixty"
        android:textSize="@dimen/app_dp_thirty_five"
        android:text="@string/audio_broadcast" />

    <TextView
        android:id="@+id/text_broadcast"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_dp_sixty"
        android:textSize="@dimen/app_dp_thirty_five"
        android:text="@string/text_broadcast" />

</LinearLayout>